--- a/src/index.css
+++ b/src/index.css
@@ -71,11 +71,22 @@ html {
   border: none;
   border-radius: 5px;
   transition: all 0.4s ease 0s;
-  padding: 2px 8px;
+  padding: 6px 8px;
   font-family: 'Chivo Mono', monospace;
+  margin: 0 3px;
 
 }
-
+.code{
+  @apply text-sm font-semibold
+}
+.code:hover{
+  background-color: #34C759;
+  color: white;
+}
+.code-btn:hover{
+  background-color: "#37609C" !important;
+  color: white;
+}
 .active {
   @apply px-4 md:px-6 bg-bg-button h-8 text-white font-bold
 }
@@ -115,13 +126,14 @@ html {
 
 /* Animations */
 .glitch {
-  font-size: 3rem;
+  font-size: 3.25rem;
   font-weight: bold;
   text-transform: uppercase;
   position: relative;
   text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff,
     0.025em 0.04em 0 #fffc00;
   animation: glitch 725ms infinite;
+  line-height: 1.3;
 }
 
 .glitch span {
